# aoc-2025-py

./: .gitignore  LICENSE  pyproject.toml
src/aoc2025/: __init__.py  __main__.py
src/aoc2025/inputs/: __init__.py
src/aoc2025/solutions/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py
src/aoc2025/util/: parsing.py
src/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py
